# seagull

./: .gitattributes  .gitignore  .gitmodules  CMakeLists.txt  Readme.adoc
configuration/: root_directory.h.in
seagull/headers/: ResourceManager.h  SceneManager.h  SeagullUi.h  Seagull_Ui.h  Utils.h  camera.h  errormsg.h  filesystem.h  mesh.h  model.h  profiler.h  seagull.h  shaders.h  vbo.h
seagull/src/: ResourceManager.cpp  SeagullUi.cpp  Seagull_Ui.cpp  Utils.c  Utils.cpp  camera.cpp  errormsg.c  mesh.cpp  model.cpp  parser.py  seagull.c  seagull.cpp  shaders.c  shaders.cpp  vbo.c
seagull/tests/: CMakeLists.txt  TestPinwheel.cpp
seagull/tmp/: Phil.fbx  Phil.gltf  cross.ply  curse.glb  curse.gltf  ugly_city.fbx  ugly_city.gltf  wooden_box.gltf
seagull/tmp/Eyeball/: Eyeball.gltf  Eyeball.mtl
seagull/tmp/monolith/: monolith.fbx  monolith.gltf  monolith.mtl
seagull/tmp_shaders/: backpackFragment.glsl  backpackVertex.glsl  defaultFragment.glsl  defaultVertex.glsl  fragmentShader.glsl  lightCubeFragment.glsl  lightCubeVertex.glsl  monolithFragment.glsl  normalsFragment.glsl  normalsGeometry.glsl  normalsVertex.glsl  vertexShader.glsl
